# w60x2svd

./: Cargo.toml  README.md  w600.format.svd  w600.svd
.vim/: coc-settings.json
csvs/: 7816.csv  convert.py  crypto.csv  dma.csv  gpioa.csv  gpiob.csv  hspi.csv  hspi_master.csv  i2c.csv  i2s.csv  index.bak.csv  index.csv  index.csv.bak  pmu.csv  pwm.csv  rsa.csv  rst.csv  rtc.csv  spi.csv  timer.csv  uart0.csv  w600.xlsx  watchdog.csv
csvs/7816/: AUTO_FLOW_CTRL.csv  BAUD_RATE_CTRL.csv  DMA_CTRL.csv  FIFO_STATUS.csv  GUARD_TIME.csv  INT_MASK.csv  INT_SRC.csv  RX_DATA_WINDOW.csv  TX_DATA_WINDOW.csv  UART_FIFO_CTRL.csv  UART_LINE_CTRL.csv  WAIT_TIME.csv
csvs/crypto/: GPSEC_CFG.csv  GPSEC_CTRL.csv  GPSEC_STS.csv
csvs/dma/: CHNL_CTRL.csv  CUR_DEST_ADDR.csv  DESC_ADDR.csv  DEST_ADDR.csv  DEST_WRAP_ADDR.csv  DMA_CTRL.csv  DMA_MODE.csv  DMA_STATUS.csv  INT_MASK.csv  INT_SRC.csv  SRC_ADDR.csv  SRC_WRAP_ADDR.csv  UART_CH.csv  WRAP_SIZE.csv
csvs/gpio/: GPIO_DATA.csv  GPIO_DATA_EN.csv
csvs/gpioa/: GPIO_AF_S0.csv  GPIO_AF_SEL.csv  GPIO_DATA.csv  GPIO_DATA_EN.csv  GPIO_DIR.csv  (+9 more)
json/: 7816.json  crypto.json  dma.json  gpioa.json  gpiob.json  i2c.json  i2s.json  pmu.json  pwm.json  rsa.json  rst.json  rtc.json  spi.json  timer.json  uart0.json  uart1.json  watchdog.json
patched_json/: 7816.json  dma.json  gpiob.json  i2s.json  rst.json  timer.json  uart0.json  watchdog.json
src/: device.rs  dim.rs  enumerated_values.rs  field.rs  main.rs  mode.rs  op.rs  peripheral.rs  register.rs  utils.rs
svd/: lib.rs  w600.base.svd  w600.svd
svdjson/: device.json  devices.json
(+152 files in other folders)
