[package]
name = "w60x2svd"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svd-parser = { path = "../svd", features = ["unproven"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
v_eval = "0.6.0"


