[package]
name = "w60x2svd"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
regex = "1.4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
svd-parser = "0.9.0"

